# osnova

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: osnova.h  osnova.m  osnova.macos.m  window.h  window.m
test/: CMakeLists.txt
test/src/: main.m
